# AmazonWatcher

./: .gitignore  README.md  pyproject.toml  requirements.txt  scrapy.cfg  setup.py
AmazonWatcher/: __init__.py  items.py  middlewares.py  pipelines.py  settings.py  sqldb.py  wmysql.py
AmazonWatcher/Public/: __init__.py  app.py  auth.py  main.py
AmazonWatcher/Public/templates/: base.html  conditions.html  home.html  result.html  sucess.html  verification.html
AmazonWatcher/Utils/: __init__.py  schema.py  send_email.py  sqldb.py
AmazonWatcher/spiders/: itemscraper.py
Public/: app.py  auth.py  main.py
Public/templates/: base.html  conditions.html  home.html  result.html  sucess.html  testwebsite.py  verification.html
Utils/: models.py  send_email.py  sqldb.py  wmysql.py
