[tool.poetry]
name = "amazon"
version = "0.1.0"
description = ""
authors = ["Vikrant Reddy <vikrantreddy@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
random-user-agent = "^1.0.1"
free-proxy = "^1.0.2"
SQLAlchemy = "^1.4.22"
PyMySQL = "^1.0.2"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
isort = "^5.9.2"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
